<resources>
    <string name="default_web_client_id">398002460571-lkbl77ulgrbngfud1j082od4nudpda95.apps.googleusercontent.com</string>
    <string name="app_name">Repülőjegyek</string>
    <string name="login_button_string">Bejelentkezés</string>
    <string name="registration_text">Regisztráció</string>
    <string name="registration_username">Felhasználónév</string>
    <string name="registration_email">E-mail cím</string>
    <string name="registration_password">Jelszó</string>
    <string name="registration_password_verification">Jelszó megerősítése</string>
    <string name="registration_cancel_button">Mégse</string>
    <string name="login_text">Bejelentkezés</string>
    <string name="flight_id">Járat azonosító</string>
    <string name="from_airport">Honnan</string>
    <string name="to_airport">Hova</string>
    <string name="departure_datetime">Indulás időpontja</string>
    <string name="arrival_datetime">Érkezés időpontja</string>
    <string name="ticket_booking_button">Jegyfoglalás</string>
    <string name="search">Keresés</string>
    <string name="own_tickets">Jegyeim</string>
    <string name="profile">Profil</string>
    <string name="logout">Kijelentkezés</string>
    <string name="delete_ticket">Jegy törlése</string>
    <string name="ticket_id">Jegy azonosító</string>
    <string name="username">Felhasználónév</string>
    <string name="seat">Hely</string>
    <string name="logo">Repülőjegyek logó</string>
    <string name="seat_booking">Hely lefoglalása</string>
    <string name="departure_airport_name">Felszállás reptér neve</string>
    <string name="arrival_airport_name">Leszállás reptér neve</string>
    <string name="ticket_booking_plane_type">Repülőgép típusa</string>
    <string name="remaining_seat_count">Megmaradó helyek száma</string>
    <string name="minimum_ticket_count">1</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="ticket_count_label">Adja meg a helyek számát:</string>
    <string name="remaining_seats_label">Megmaradó helyek száma:</string>
    <string name="profile_text">Felhasználói profil</string>
    <string name="change_username_label">Felhasználónév megváltoztatása:</string>
    <string name="change_email_label">Email cím megváltoztatása:</string>
    <string name="new_username">Új felhasználónév</string>
    <string name="new_email">Új email cím</string>
    <string name="save_changes">Mentés</string>
    <string name="flights">Járatok</string>
    <string name="password_label">Add meg a jelszavad:</string>
    <string name="password">Jelszó</string>
    <string name="current_username">Jelenlegi felhasználónév:</string>
    <string name="default_username">default</string>
    <string name="camera">Kamera</string>
</resources>