<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:textColor="@color/gold">


    <item
        android:id="@+id/flights"
        android:title="@string/flights"
        android:icon="@drawable/flights_icon"
        app:showAsAction="always"

        />

    <item
        android:id="@+id/ownTickets"
        android:title="@string/own_tickets"
        android:icon="@drawable/airplane_ticket_icon"
        app:showAsAction="always"

        />

    <item
        android:id="@+id/openCamera"
        android:title="@string/camera"
        app:showAsAction="never"

        />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never"

        />
</menu>