<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gold">

        <TextView
            android:id="@+id/ticketBookingFlightId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flight_id"
            android:textColor="@color/blue"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/ticketBookingPlaneType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticket_booking_plane_type"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ticketBookingFlightId"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/ticketBookingFromAirport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_airport"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ticketBookingPlaneType"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/ticketBookingToAirport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_airport"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ticketBookingPlaneType"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/ticketBookingFromAirportName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure_airport_name"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ticketBookingFromAirport"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/ticketBookingToAirportName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrival_airport_name"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ticketBookingFromAirport"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/ticketBookingDepartureDatetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure_datetime"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ticketBookingFromAirportName"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/ticketBookingArrivalDatetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrival_datetime"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ticketBookingToAirportName"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/remainingSeatsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remaining_seats_label"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ticketBookingDepartureDatetime"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/remainingSeatCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remaining_seat_count"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ticketBookingDepartureDatetime"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/ticketCountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticket_count_label"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/remainingSeatsLabel"
            app:layout_constraintVertical_bias="0.3" />

        <EditText
            android:id="@+id/editTextTicketCount"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:autofillHints="1"
            android:inputType="number"
            android:text="@string/minimum_ticket_count"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/remainingSeatCount"
            app:layout_constraintVertical_bias="0.25" />


        <Button
            android:id="@+id/ticketBookingVerificationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seat_booking"
            android:textColor="@color/gold"
            android:textSize="16sp"
            app:backgroundTint="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTicketCount"
            app:layout_constraintVertical_bias="0.25" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>